--- a/rep01.html
+++ b/rep01.html
@@ -31,9 +31,15 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを作成した。<br>
+        スクラッチを使用し、コードを並べて、線画を描くプログラムと猫がリンゴをキャッチするプログラムを作成した。<br>
         2.感想<br>
-        プログラミングをすること自体が初めてだったのでとても楽しかった、良い経験となった。<br>
+        まずは、プログラミングをすること自体が初めてだったのでとても楽しかったのと、達成感があった。今回の実習では、<br>
+        先生が基本的なことからとてもゆっくり説明してくださったので、苦手意識があった自分でも作成できた。しかし、<br>
+        次に自分でプログラミングをする時は、言われたことをこなしていくだけではなく、座標の値を変えてみたり、新しいコードなども<br>
+        もっと積極的に使えるようになりたいと考えた。このことを早く実現させるために、暇な時間を見つけ、遊びながら少しでも<br>
+        学んできたいと思う。
+
+
       </div>
     </div>
 
@@ -54,9 +60,11 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://haruka225.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        Githabを使用し、自分だけのホームページを作成した。あるサイトを自分のGithabにForkした。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        ホームページを作成する段階よりも前に、サインアップするのにとても時間が掛かった。サインアップして、
+     <br>あるサイトを自分のGithabにForkしてみて思ったのは、内容を編集するのでさえ難しく感じていること。<br>
+        日頃からもう少しパソコンに触れていかなければならないと思う。
       </div>      
     </div>
 
