--- a/rep01.html
+++ b/rep01.html
@@ -31,7 +31,8 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使用し、コードを並べて、線画を描くプログラムと猫がリンゴをキャッチするプログラムを作成した。<br>
+        スクラッチを使用し、コードを並べて、線画を描くプログラムを作成した。余った時間で、座標に入れる値を変えるなどして自由に線を描いた。<br>
+    　　
         2.感想<br>
         まずは、プログラミングをすること自体が初めてだったのでとても楽しかったのと、達成感があった。今回の実習では、<br>
         先生が基本的なことからとてもゆっくり説明してくださったので、苦手意識があった自分でも作成できた。しかし、<br>
@@ -48,9 +49,12 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        スクラッチを使用し、コードを並べて、猫がリンゴをキャッチするプログラムを作成した。リンゴが落ちる速度、得点をつける<br>
+        プログラムを組んだ。背景やBGMなど工夫できるところが多かった。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        中学校の時に、パソコン部が文化発表会で発表していたゲームだった。どのようにして作るプログラミングなのか知れて<br>
+        とても興味深かった。特にリンゴを落とす速度をランダムにすることが楽しかった。また自分で作るときは、もっと細かな設定を付け加えたり<br>
+        することで、難易度の高低を定めてみたいと思う。
       </div>
     </div>
 
