--- a/rep02.html
+++ b/rep02.html
@@ -57,7 +57,7 @@
         1.内容<br>
         二人一組になって<br>
         2.感想<br>
-        かんそうかんそうＶＲ体験をしたのは初めてだったので本当に楽しかった。<br>
+        ＶＲ体験をしたのは初めてだったので本当に楽しかった。画質がとてもよく<br>
       </div>
     </div>
     
