--- a/rep02.html
+++ b/rep02.html
@@ -30,9 +30,10 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        基となるホームページをフォークして、自分の好きなように画像を貼ったり、文章の編集をした。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        画像の貼り付けがうまくいかないことがあって苦戦した。画像がしっかり貼られているか確認する際に、Googleで<br>
+        自分のレポートのリンクを貼るので、ホームページが出来たという達成感があった。
         3. 2週目が完成した人は1週目のレポートも完成させる<br>
       </div>
     </div>
@@ -57,10 +58,12 @@
 ===
       <div>
         1.内容<br>
-        二人一組になって会議室に入室した。オンラインで入室していない人も、その様子を閲覧することが出来た。
+        二人一組になって会議室に入室した。オンラインで入室していない人も、その様子を閲覧することが出来た。また
+  　　　Robloxでは６人1チームになって同じワールドに入ってVR体験をした。
   <br>
         2.感想<br>
-        ＶＲ体験をしたのは初めてだったので本当に楽しかった。画質がとてもよく感動した。<br>
+        ＶＲ体験をしたのは初めてだったので本当に楽しかった。画質がとてもよく感動した。ゴーグルがとても重く、ベルトの調節が<br>
+        上手くいかなかったので視界が悪く、乗り物酔いのような気分になった。もう少し軽量だったらいいのにと思った。
       </div>
     </div>
     
