--- a/rep01.html
+++ b/rep01.html
@@ -67,8 +67,8 @@
         Githabを使用し、自分だけのホームページを作成した。あるサイトを自分のGithabにForkした。<br>
         2.感想<br>
         ホームページを作成する段階よりも前に、サインアップするのにとても時間が掛かった。サインアップして、
-     <br>あるサイトを自分のGithabにForkしてみて思ったのは、内容を編集するのでさえ難しく感じていること。<br>
-        日頃からもう少しパソコンに触れていかなければならないと思う。
+     <br>サイトを自分のGithabにForkしてみて思ったのは、内容を編集するのでさえ難しく感じていること。<br>
+       　 これを解決するためには日頃からもう少しパソコンに触れていかなければならないと思う。
       </div>      
     </div>
 
