--- a/rep01.html
+++ b/rep01.html
@@ -35,12 +35,10 @@
     　　
         2.感想<br>
         まずは、プログラミングをすること自体が初めてだったのでとても楽しかったのと、達成感があった。今回の実習では、<br>
-        先生が基本的なことからとてもゆっくり説明してくださったので、苦手意識があった自分でも作成できた。しかし、<br>
-        次に自分でプログラミングをする時は、言われたことをこなしていくだけではなく、座標の値を変えてみたり、新しいコードなども<br>
-        もっと積極的に使えるようになりたいと考えた。このことを早く実現させるために、暇な時間を見つけ、遊びながら少しでも<br>
-        学んできたいと思う。
-
-
+        先生が基本的なことからとても丁寧に説明してくださったので、苦手意識があった自分でも作成できた。しかし、次に自分で<br>
+        プログラミングをする時は言われたことをこなしていくだけではなく、自分が思った通りに動くように考えて、座標の値を変えてみたり、<br>
+        新しいコードなどももっと積極的に使えるようになりたいと考えた。暇な時間を見つけ、遊びながら少しでも学んできたいと思う。<br>
+       
       </div>
     </div>
 
@@ -52,8 +50,8 @@
         スクラッチを使用し、コードを並べて、猫がリンゴをキャッチするプログラムを作成した。リンゴが落ちる速度、得点をつける<br>
         プログラムを組んだ。背景やBGMなど工夫できるところが多かった。<br>
         2.感想<br>
-        中学校の時に、パソコン部が文化発表会で発表していたゲームだった。どのようにして作るプログラミングなのか知れて<br>
-        とても興味深かった。特にリンゴを落とす速度をランダムにすることが楽しかった。また自分で作るときは、もっと細かな設定を付け加えたり<br>
+        中学校の時に、パソコン部が発表していたプログラミングと同様だった。どのようなプログラミングなのか学べてとても<br>
+        興味深かった。特にリンゴを落とす速度をランダムにすることが楽しかった。自分で作る場合は、もっと細かな設定を付け加えたり<br>
         することで、難易度の高低を定めてみたいと思う。
       </div>
     </div>
@@ -66,9 +64,9 @@
         1.内容<br>
         Githabを使用し、自分だけのホームページを作成した。あるサイトを自分のGithabにForkした。<br>
         2.感想<br>
-        ホームページを作成する段階よりも前に、サインアップするのにとても時間が掛かった。サインアップして、
-     <br>サイトを自分のGithabにForkしてみて思ったのは、内容を編集するのでさえ難しく感じていること。<br>
-       　 これを解決するためには日頃からもう少しパソコンに触れていかなければならないと思う。
+        ホームページを作成する段階よりも前に、サインアップするのにとても時間が掛かった。サインアップして、<br>
+     　サイトを自分のGithabにForkしてみて思ったのは、内容を編集するのでさえ難しく感じていること。 これを解決するためには<br>
+       日頃からもう少しパソコンに触れていかなければならないと思う。<br> 
       </div>      
     </div>
 
