--- a/rep02.html
+++ b/rep02.html
@@ -65,6 +65,12 @@
         2.感想<br>
         ＶＲ体験をしたのは初めてだったので本当に楽しかった。画質がとてもよく感動した。ゴーグルがとても重く、ベルトの調節が<br>
         上手くいかなかったので視界が悪く、乗り物酔いのような気分になった。もう少し軽量だったらいいのにと思った。<br>
+        Iコース　前田先生のお話を聞いた感想<br>
+        夏休みも毎週木曜日に、部活ではないが、先生の研究室で作りたいものを造るサポートをしていただけるとわかった。<br>
+        自分が何を作りたいのか具体的に決まったら、是非一度参加させていただきたいと感じた。参加すれば必ず自分にとって良い経験に<br>
+        なるだろうと考えました。
+
+      
       
       </div>
     </div>
