--- a/rep01.html
+++ b/rep01.html
@@ -50,9 +50,9 @@
         スクラッチを使用し、コードを並べて、猫がリンゴをキャッチするプログラムを作成した。リンゴが落ちる速度、得点をつける<br>
         プログラムを組んだ。背景やBGMなど工夫できるところが多かった。<br>
         2.感想<br>
-        中学校の時に、パソコン部が発表していたプログラミングと同様だった。どのようなプログラミングなのか学べてとても<br>
-        興味深かった。特にリンゴを落とす速度をランダムにすることが楽しかった。自分で作る場合は、もっと細かな設定を付け加えたり<br>
-        することで、難易度の高低を定めてみたいと思う。
+        中学校の時に、パソコン部が発表していたプログラミングと同様だった。どのようなプログラミングなのか学べてとても興味深かった。<br>
+       特にリンゴを落とす速度をランダムにすることが楽しかった。自分で作る場合は、もっと細かな設定を付け加えたりすることで、<br>
+      　難易度の高低を定めてみたいと思う。
       </div>
     </div>
 
@@ -64,9 +64,9 @@
         1.内容<br>
         Githabを使用し、自分だけのホームページを作成した。あるサイトを自分のGithabにForkした。<br>
         2.感想<br>
-        ホームページを作成する段階よりも前に、サインアップするのにとても時間が掛かった。サインアップして、<br>
-     　サイトを自分のGithabにForkしてみて思ったのは、内容を編集するのでさえ難しく感じていること。 これを解決するためには<br>
-       日頃からもう少しパソコンに触れていかなければならないと思う。<br> 
+        ホームページを作成する段階よりも前に、サインアップするのにとても時間が掛かった。サインアップして、サイトを<br>
+     　自分のGithabにForkしてみて思ったのは、内容を編集するのでさえ難しく感じていること。 これを解決するためには日頃から<br>
+       もう少しパソコンに触れていかなければならないと思う。<br> 
       </div>      
     </div>
 
