--- a/rep02.html
+++ b/rep02.html
@@ -59,7 +59,7 @@
 ===
       <div>
         1.内容<br>
-        二人一組になって会議室に入室した。オンラインで入室していない人も、その様子を閲覧することが出来た。また　Robloxでは<br>
+        二人一組になって会議室に入室した。オンラインで入室していない人も、その様子を閲覧することが出来た。またRobloxでは<br>
   　　　６人1チームになって同じワールドに入ってVR体験をした。<br>
   <br>
         2.感想<br>
@@ -68,7 +68,7 @@
         Iコース　前田先生のお話を聞いた感想<br>
         夏休みも毎週木曜日に、部活ではないが、先生の研究室で作りたいものを造るサポートをしていただけるとわかった。<br>
         自分が何を作りたいのか具体的に決まったら、是非一度参加させていただきたいと感じた。参加すれば必ず自分にとって良い経験に<br>
-        なるだろうと考えました。
+        なるだろうと考えた。
 
       
       
