--- a/rep03.html
+++ b/rep03.html
@@ -69,9 +69,9 @@
         
         <br>
         2.感想<br>
-        部屋のような空間の中にさっきコピーしたテンプレートが存在しているような空間であった。 この空間を作りあげるためには、<br>
-        あと何十行かプログラミングを付け足さなければいけない。また空間上で球を打ち出せるのがとても楽しかった。どんなプログラミングを<br>
-     　組んだら、あの部屋のような空間、球を打つプログラミングが出来るのか気になった。<br>
+        部屋のような空間の中にさっきコピーしたテンプレートが存在しているような空間であった。この空間を作りあげるためには、<br>
+        あと何十行かプログラミングを付け足さなければいけない。空間上で球を打ち出せるのがとても楽しかった。どんなプログラミングを<br>
+     　　組めば、あの部屋のような空間や、球を打つプログラミングが出来るのか気になった。<br>
       　<br>
         
         <br>
