--- a/rep02.html
+++ b/rep02.html
@@ -59,8 +59,9 @@
 ===
       <div>
         1.内容<br>
-        二人一組になって会議室に入室した。オンラインで入室していない人も、その様子を閲覧することが出来た。またRobloxでは<br>
-  　　　６人1チームになって同じワールドに入ってVR体験をした。<br>
+        二人一組になって会議室に入室した。オンラインで入室していない人も、その様子を閲覧することが出来た。<br>
+        またRobloxでは６人1チームになって同じワールドに入ってVR体験をした。<br>
+  　　
   
         2.感想<br>
         ＶＲ体験をしたのは初めてだったので本当に楽しかった。画質がとてもよく感動した。ゴーグルがとても重く、ベルトの調節が<br>
