--- a/rep02.html
+++ b/rep02.html
@@ -60,7 +60,7 @@
       <div>
         1.内容<br>
         二人一組になって会議室に入室した。オンラインで入室していない人も、その様子を閲覧することが出来た。<br>
-        またRobloxでは６人1チームになって同じワールドに入ってVR体験をした。<br>
+        またRobloxでは６人1チームになって同じワールドに入ってVR体験をした。
   　　
   
         2.感想<br>
