--- a/rep01.html
+++ b/rep01.html
@@ -52,7 +52,7 @@
         2.感想<br>
         中学校の時に、パソコン部が発表していたプログラミングと同様だった。どのようなプログラミングなのか学べてとても興味深かった。<br>
        特にリンゴを落とす速度をランダムにすることが楽しかった。自分で作る場合は、もっと細かな設定を付け加えたりすることで、<br>
-      　難易度の高低を定めてみたいと思う。
+      　難易度の高低を定めてみたいと思う。<br>
       </div>
     </div>
 
